--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,22 @@
 body {
   background: lightcoral;
-  width: 80%;
-  margin: 0 auto;
+  margin: 0;
+}
+
+h1 {
+  margin: 0 400px 20px;
+  text-align: center;
+  font-size: 80px;
+  color: #fff;
+}
+h1:hover {
+  background-color: navy;
+}
+h2 {
+  margin: 0 500px;
+}
+h2:hover {
+  background-color: #fff;
 }
 main {
   text-align: center;
